--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
 body {
   font-family: "Mitr", sans-serif;
 }
-
-/* navbar */
-/* .navbar {
-} */
+.intro {
+  background: linear-gradient(to right, #6039fa, #ff00ff);
+  border-radius: 20% 80% 0% 100% / 40% 0% 100% 60%;
+  max-width: 50%;
+  max-height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 0%;
+}
+.intro img {
+  max-width: 100%;
+  position: relative;
+  top: 50px;
+}
 
 .nav-link {
-  color: white !important;
+  color: rgb(10, 10, 10) !important;
   font-size: 1 rem;
 }
-.nav-item{
-  background-color: #3737f3;
+
+.nav-item .active {
+  background-color: #8383fb !important;
   border-radius: 1px solid #000000;
   border-radius: 25px;
 }
+/* .nav-item{
+  
+} */
 
 .nav-item:not(:first-child):not(:last-child) {
-  margin: 0rem .3rem;
+  margin: 0rem 0.3rem;
 }
 
 .navbar-brand {
@@ -27,18 +41,18 @@ body {
 }
 
 .navbar-toggler {
-  /* background-color: rgb(41, 230, 255); */
+  background-color: rgb(41, 230, 255);
 }
 .navbar-toggler:hover,
 .navbar-toggler:focus {
-  /* background-color: white; */
+  background-color: white;
 }
 
 .dropdown-menu {
   /* background-color: #000080; /* shade of blue */
   color: white;
-  border-bottom: 2px solid white; */
+  border-bottom: 2px solid white;
 }
 .dropdown-item {
-  /* color: white; */
+  color: white;
 }
